# WEB_Homework_14

./: main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/versions/: 1189d7d54a6e_init.py  29fb908bfcd0_update_contact_model.py  40cac1981ebf_phone.py  9a0f7a254eb5_add_confirmed.py  d17281aa0dec_update.py  d6dcea34a1ed_add_users.py  de7f2a606aff_update_format_birthday.py
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1259  16390  16393  16423  16424  16426  16427  16428  16430  16436  16437  16439  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+2 more)
postgres-data/global/: pg_control
postgres-data/pg_stat_tmp/: global.stat
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py
tests/: conftest.py  test_auth.py  test_route_contacts.py  test_unit_repository_contacts.py
